# DevOs

./: .gitignore  Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs  models.rs  state.rs
src/core/: chat.rs  file_manager.rs  git.rs  indexer.rs  logger.rs  mod.rs  patch.rs  project.rs  terminal.rs
src/ui/: chat_panel.rs  command_palette.rs  editor.rs  file_explorer.rs  git_panel.rs  mod.rs  patch_view.rs  settings.rs  terminal.rs  top_bar.rs
tests/: git_actions_test.rs  patch_apply_test.rs
