[package]
name = "devos"
version = "0.1.0"
edition = "2021"
description = "DevOS — A local developer workspace with editor, terminal, git, and AI assistant"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["syntect"] }
tokio = { version = "1", features = ["full"] }
git2 = "0.19"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
dirs = "6"
diffy = "0.4"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
